--- a/server/db/sqlc.yaml
+++ b/server/db/sqlc.yaml
@@ -1,7 +1,7 @@
 version: 1
 packages:
   - path: "."
-    name: "bill_app_server"
+    name: "db"
     engine: "postgresql"
     schema: "schema.sql"
-    queries: "query.sql"
+    queries: "./queries"
